--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>Soluções Robóticas</header>
-    <section class="">
-        <div class="">
+    <section class="chamada">
+        <div class="chamada-text">
             <h1>Trabalhando com Robótica Educacional</h1>
             <p>#os melhores vídeos</p>
             <p> Estamos começando a arrumar e dar certo </p>
