--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>Soluções Robóticas</header>
     <section class="chamada">
-        <div class="chamada-text">
+        <div class="chamada-texto">
             <h1>Trabalhando com Robótica Educacional</h1>
             <p>#os melhores vídeos</p>
             <p> Estamos começando a arrumar e dar certo </p>
