--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Trabalhando com Robótica Educacional</h1>
-            <p>#os melhores vídeos</p>
-            <p> Estamos começando a arrumar e dar certo </p>
+            <p>#os melhores vídeos que podemos arrumar sobre robótica</p>
+            <p> FIQUE ATENTO PARA AS MODIFICAÇÕES </p>
 
-
-            hhhhhhhhhhhhhhhhhhhhh
         </div>
 
         <div>
