--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="https://www.youtube.com/watch?v=admjB15l00g">
                 <img src="https://img.youtube.com/vi/admjB15l00g/maxresdefault.jpg" />
             </a>
-            <a href="https://youtu.be/NH8L0OOtdas?si=-JYE7r62n2DLSt2F">
+            <a href="https://www.youtube.com/watch?si=-JYE7r62n2DLSt2F">
                 <img src="https://img.youtube.com/vi/admjB15l00g/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
